stats on tool-exposure pairs; add MA on POMS

--- a/code/010_MA_exposure.Rmd
+++ b/code/010_MA_exposure.Rmd
@@ -30,6 +30,7 @@ source('./code/func_plot_freq.R')
 source('./code/func_ggsave.R')
 
 ## Additional packages
+library(googlesheets4)
 library(rprojroot)
 library(tidyverse)
 library(stringr)
@@ -52,6 +53,15 @@ today <- format(Sys.time(), "%Y%m%d"); today ## "%Y%m%d%H%M"
 ```
 
 
+```{r - functions}
+source('./code/func_expand_col_to_long.R')
+source('./code/func_clean_indicators.R')
+source('./code/func_clean_tools.R')
+source('./code/func_plot_freq.R')
+source('./code/func_alluvial.R')
+source('./code/func_ggsave.R')
+```
+
 
 # Data
 
@@ -60,11 +70,14 @@ today <- format(Sys.time(), "%Y%m%d"); today ## "%Y%m%d%H%M"
 ```{r}
 
 ## load data 
-fs <- list.files(path = "./data/0301-MA-input/", pattern = '^df_covidenceFull', full.names = T)
-fs
-f <- fs[-1]
+fs <- list.files(path = "./data/0301-MA-input/", pattern = '^df_covidenceFull', full.names = T); fs;
 
-df <- readRDS(file = f) %>%
+##' select the up-to-date data, which is the second to the last
+f1 <- fs[(length(fs)-1)]; f1
+##' select the gsheet data file
+f2 <- fs[(length(fs)-0)]; f2 
+
+df <- readRDS(file = f1) %>%
   dplyr::rename(
     'exposure_type' = 'Nature exposure type',
     'nature_type' = "General category of urban nature",
@@ -74,10 +87,16 @@ df <- readRDS(file = f) %>%
     ) %>%
   as.data.frame()
 # names(df)
+
+
+
+df2 <- readRDS(file = f2) %>%
+  as.data.frame()
 ```
 
 
 ## Clean data
+
 ```{r}
 ## selected variables for further analysis
 cols_keep <- c('Indicator', 'Tools', 'nature_type',  'nature_quantity', 'exposure_type')
@@ -91,30 +110,56 @@ df_exp <- df %>%
   as.data.frame()
 
 
+## unify exposure names
+f <- 'https://docs.google.com/spreadsheets/d/11oUNNjsmzC4wvYwcE8Zm_qavww0D6Twxl8UoPve1WOE/edit?usp=sharing'
+exposure_tier <- googlesheets4::read_sheet(f, sheet = 'nature_exposure_channels') %>%
+  dplyr::select(-exposure_type_t3) %>%
+  as.data.frame()
+
 df_exp_l <- df_exp %>% 
   ## expand `exposure_type` if there are > 1 exposure types in a study
   expand_col_to_long(data = ., target_col = 'exposure_type') %>%
-  as.data.frame()
-
-
-df_exp_l_stat <- df_exp_l %>% 
   ## clean the messy text data due to manual entry 
   dplyr::mutate(
     exposure_type = gsub("L4 physical activity", "L4 - physical activity in nature", exposure_type),
     exposure_type = gsub("L1 surrounding greenness", "L1 - neighborhood/residential exposure", exposure_type),
     exposure_type = gsub("L2 objective accessibility", "L2 - objective accessibility", exposure_type),
+    # exposure_type1 = ifelse(str_detect(exposure_type, regex('duration', ignore_case = T)), 'Time spent in nature', exposure_type),
+    exposure_type = ifelse(grepl(x = exposure_type, 'duration|Spending hour|Time spent', ignore.case = T), 'Duration in nature', exposure_type),
     ) %>%
-  group_by(exposure_type) %>%
-  dplyr::count() %>%
-  ungroup() %>%
-  as.data.frame()
+  left_join(., y = exposure_tier,
+            by = 'exposure_type') %>%
+  dplyr::rename('exposure_type_t1' = 'exposure_type') %>%
   
+  ## to decide which tier name for the next step analysis
+  dplyr::rename('exposure_type'    = 'exposure_type_t2') %>%
+  as.data.frame()
 ```
 
 
-### Stat on exposure_type
+### stat on exposure
+
+**To-do**
+  [] 'L4' needs to be further clarified 
+  
+
 ```{r}
-plot_freq(data = df_exp_l_stat, var = 'exposure_type') +
+
+df_exp_l_stat <- df_exp_l %>% 
+  group_by(exposure_type_t1, exposure_type) %>%
+  dplyr::count() %>%
+  ungroup() %>%
+  as.data.frame()
+
+df_exp_l_stat2 <- df_exp_l_stat %>%
+  group_by(exposure_type) %>%
+  dplyr::summarise_at(c('n'), sum, na.rm = T) %>%
+  ungroup() %>%
+  dplyr::filter(!is.na(exposure_type)) %>%
+  as.data.frame()
+
+
+plot_freq(data = df_exp_l_stat2, var = 'exposure_type') +
    geom_text(aes(label = n), vjust = .5, hjust = 0)
 
 f <- paste0('mini-review_nature exposure_', today, '.png')
@@ -123,23 +168,108 @@ func_ggsave(fname = fname, w = 7, h = 4, save_png = T)
 ```
 
 
+### stat on exposure-tool pair
+
+```{r}
+
+df_exp_l_toolL <- df_exp_l %>%
+  dplyr::mutate(Tool = gsub("Other: ", "", Tools),
+                ##' remove text within parenthesis 
+                Tool = gsub("\\s*\\([^\\)]+\\)", "", Tool)) %>%
+  expand_col_to_long(data = ., target_col = "Tool") %>%
+  dplyr::mutate(
+    Tool = gsub(".*Likert.*|.*likert.*", "Likert scale", Tool),
+    # Tool = gsub(";", "", Tool),
+    ) %>% 
+  func_clean_tools(data = .) %>%
+  dplyr::select(1:Tools, Tool, everything()) %>%
+  arrange(Tool)
+
+
+
+df_exp_tool_flow <- df_exp_l_toolL %>%
+  group_by(Tool, exposure_type) %>%
+  tally() %>%
+  as.data.frame() %>%  
+  pivot_longer(names_to  = 'dimension', 
+               values_to = 'layers', 
+               cols = c('Tool', 'exposure_type')) %>%
+  group_by(dimension) %>%
+  dplyr::mutate(id_within_layers = row_number(dimension)) %>%
+  arrange(dimension) %>%
+  dplyr::rename(freq = n) %>%
+  dplyr::mutate(
+    dimension = factor(dimension, levels = c('Tool', 'exposure_type')),
+    ) %>%
+  group_by(layers) %>%
+  dplyr::mutate(total = sum(freq, na.rm = T)) %>%
+  as.data.frame()
+
+width_my <- 1/2
+sorted <- T  ## sorted by flow size
+sorted <- NA ## default setting, sorted alphabetically 
+
+indicator_n_min <- 5 ## only map indicators with more than 5 times
+# Labeling small strata
+labele_small <- 5
+
+
+func_alluvial(data = df_exp_tool_flow, indicator_n_min = 5, width_my = width_my, w_p = 7,
+              show_y_ticks = F, 
+              filename.prefix = '', filename.postfix = 'tool_exposure')
+
+
+
+### only include the top 3 MH tools ------------------------------------------------------
+tool_selected <- c('GHQ-12', 'PANAS', 'POMS')
+# df_exp_tool_flow3 <- df_exp_tool_flow %>%
+#   dplyr::mutate(remove = ifelse(dimension == 'Tool' & !layers %in% tool_selected, 0, 1)) %>%
+#   dplyr::filter(remove != 0) %>% dplyr::select(-remove)
+
+df_exp_tool_flow3 <- df_exp_l_toolL %>%
+  dplyr::filter(Tool %in% tool_selected) %>% 
+  group_by(Tool, exposure_type) %>%
+  tally() %>%
+  as.data.frame() %>%  
+  pivot_longer(names_to  = 'dimension', 
+               values_to = 'layers', 
+               cols = c('Tool', 'exposure_type')) %>%
+  group_by(dimension) %>%
+  dplyr::mutate(id_within_layers = row_number(dimension)) %>%
+  arrange(dimension) %>%
+  dplyr::rename(freq = n) %>%
+  dplyr::mutate(
+    dimension = factor(dimension, levels = c('Tool', 'exposure_type')),
+    ) %>%
+  group_by(layers) %>%
+  dplyr::mutate(total = sum(freq, na.rm = T)) %>%
+  as.data.frame()
+
+func_alluvial(data = df_exp_tool_flow3, indicator_n_min = 5, width_my = width_my, w_p = 7,
+              show_y_ticks = F, 
+              filename.prefix = '', filename.postfix = 'tool3_exposure')
+```
+
 
 ## Input data for MA
 
 ### subset one `exposure_type`
 ```{r}
+mh_tool           <- "GHQ-12"
 
-exposure_type_i   <- 'L1 - neighborhood/residential exposure'
+# exposure_type_i   <- 'L1 - neighborhood/residential exposure'
+exposure_type_i   <- c('Residential')
+
 effect_size_ind_i <- 'coefficients'
   
 ###' subset papers that examined `exposure_type_i`
 exp_sub <- df_exp_l %>%
-  dplyr::filter(exposure_type == exposure_type_i)
+  dplyr::filter(exposure_type %in% exposure_type_i)
 exp_sub_id <- unique(exp_sub$id)
 
 exp_sub_df <- df %>%
   dplyr::filter(id %in% exp_sub_id) %>%
-  dplyr::filter(str_detect(Tools, "GHQ-12")) %>%
+  dplyr::filter(str_detect(Tools, mh_tool)) %>%
   ## clean messy text in `effect_size_indices`
   dplyr::mutate(effect_size_indices = gsub("Other: |Other:", "", `Effect size indices`),
                 effect_size_indices = gsub("=.*", "", effect_size_indices),
@@ -154,6 +284,47 @@ exp_sub_df <- df %>%
   dplyr::select(-c(Title:meet_criteria)) %>%
   as.data.frame()
 ```
+
+
+
+### subset one `exposure_type` - 2
+```{r}
+mh_tool           <- "POMS"
+
+# exposure_type_i   <- c('stay static in nature', 'physical activity in nature') 
+exposure_type_i   <- c('In nature - static', 'In nature - PA')
+ 
+
+effect_size_ind_i <- ''
+  
+###' subset papers that examined `exposure_type_i`
+exp_sub <- df_exp_l %>%
+  # dplyr::filter(grepl(exposure_type, pattern =  paste(exposure_type_i, collapse = "|"))) %>%
+  dplyr::filter(exposure_type %in% exposure_type_i)
+exp_sub_id <- unique(exp_sub$id)
+
+exp_sub_df <- df %>%
+  dplyr::filter(id %in% exp_sub_id) %>%
+  dplyr::filter(str_detect(Tools, mh_tool)) %>%
+  ## clean messy text in `effect_size_indices`
+  dplyr::mutate(effect_size_indices = gsub("Other: |Other:", "", `Effect size indices`),
+                # effect_size_indices = gsub("=.*", "", effect_size_indices),
+                effect_size_indices = gsub("corr_linear|corr_logi|regression coefficient", "coefficients", effect_size_indices),
+                effect_size_indices = trimws(effect_size_indices)
+                ) %>%
+  dplyr::select(id:`Effect size indices`, effect_size_indices, 
+                everything()) %>%
+  dplyr::select(id:Country, 
+                all_of(cols_keep),
+                effect_size_indices:ncol(.)) %>%
+  dplyr::select(-c(Title:meet_criteria)) %>%
+  as.data.frame()
+
+# unique(exp_sub_df$id)
+```
+
+
+
 
 
 ### format table
@@ -204,7 +375,7 @@ rm(exp_sub_mod)
 ```{r}
 ### clean up the negative sign "-" in data
 test <- exp_sub_mod_l %>%
-  dplyr::filter(id %in% c(504))
+  dplyr::filter(id %in% c(504)) ## take the character from this paper
 
 m <- gsub(' ', '', test$Mean)
 sign <- m[1] %>% substr(., 1, 1)
@@ -215,8 +386,8 @@ rm(test)
 sign <- paste(sign, '−', sep = '|')
 
 
-exp_sub_mods <- exp_sub_mod_l %>%
-  dplyr::filter(!is.na(Mean)) %>%
+exp_sub_mod_l_clean <- exp_sub_mod_l %>%
+  dplyr::filter(!is.na(Mean) | !is.na(Treatment_Mean) | !is.na(Treatment_Mean)) %>%
   dplyr::rename(Mean_raw = Mean) %>%
   dplyr::rename(CI_95_lower_raw = CI_95_lower) %>%
   ##' clean the special character "-" in text
@@ -227,11 +398,7 @@ exp_sub_mods <- exp_sub_mod_l %>%
     Mean = str_squish(Mean),
     Mean = trimws(Mean),
     Mean = as.numeric(Mean),
-    Mean = case_when(
-      effect_size_indices == 'coefficients' & `Health outcome direction` == "Higher is better" ~ -Mean,
-      effect_size_indices == 'or' & `Health outcome direction` == "Higher is better" ~ 1-(Mean-1),
-      TRUE ~ Mean
-      ),
+
     ##' clean the special character "-" in text too
     CI_95_lower = as.character(CI_95_lower_raw),
     CI_95_lower = gsub(sign, "-", CI_95_lower),
@@ -247,6 +414,33 @@ exp_sub_mods <- exp_sub_mod_l %>%
                 effect_size_indices:Mean_raw, Mean, CI_95_lower_raw, CI_95_lower, everything()) %>%
   arrange(effect_size_indices, id, model_id) %>%
   as.data.frame()
+
+
+
+if (effect_size_ind_i == 'coefficients') {
+  exp_sub_mods <- exp_sub_mod_l_clean %>%
+    dplyr::mutate(
+     Mean = case_when(
+        effect_size_indices == 'coefficients' & `Health outcome direction` == "Higher is better" ~ -Mean,
+        effect_size_indices == 'or' & `Health outcome direction` == "Higher is better" ~ 1-(Mean-1),
+        TRUE ~ Mean
+        ),
+    )
+} else {
+  exp_sub_mods <- exp_sub_mod_l_clean
+}
+  
+
+
+if (mh_tool == 'POMS') {
+  exp_sub_mods2 <- exp_sub_mods %>%
+    dplyr::mutate(MH_tool = str_squish(MH_tool),
+                  MH_tool.1 = str_squish(MH_tool.1)) %>%
+    dplyr::filter(MH_tool == mh_tool | MH_tool.1 == mh_tool)
+}
+
+
+unique(exp_sub_mods2$id)
 ```
 
 
@@ -381,7 +575,7 @@ png(file=f,
     width = 1000, height = 1000, units = "px", pointsize = 22,
     # res = 200
     ) 
-forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label)
+forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label, shade=TRUE)
 dev.off() 
 
 forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, slab = study_label) # showweights=TRUE
@@ -391,7 +585,7 @@ forest(res, addpred=TRUE, header=TRUE, xlim=xlim_custmize, atransf=exp, at=log(c
 ```
 
 
-
+* NOT in use
 ```{r - forest plots with subgroups - to be fixed, eval=FALSE, include=FALSE}
 # a little helper function to add Q-test, I^2, and tau^2 estimate info
 mlabfun <- function(text, res) {
@@ -534,7 +728,7 @@ summary(m.cor)
 
 
 
-```{r - auto-report}
+```{r - auto-report, eval=FALSE, include=FALSE}
 ### reporter() function
 dir.report <- paste0('./figures/'); dir.report
 reporter(res, dir = dir.report)
